refactor(web): extract partials for forms, home and profile

--- a/src/EventPlanning.Web/Views/Event/Partials/_EventModals.cshtml
+++ b/src/EventPlanning.Web/Views/Event/Partials/_EventModals.cshtml
@@ -21,7 +21,7 @@
                 {
                     foreach (var guest in Model.Guests)
                     {
-                        <partial name="_GuestListItem" model="guest" view-data="guestItemViewData" />
+                        <partial name="Partials/_GuestListItem" model="guest" view-data="guestItemViewData" />
                     }
                 }
             </div>
